src/main/java/com/example/gitrepoexplorer/infrastructure/error/dto/RepositoryNotFoundExceptionDto.java
package com.example.gitrepoexplorer.infrastructure.error.dto;

public record RepositoryNotFoundExceptionDto(int status, String message) {
}
